[package]
name = "game"
version = "0.1.0"
authors = ["Tristan King <tristan.king@gmail.com>"]
edition = "2018"
build = "build.rs"

[features]
default = ["vulkan"]
metal = ["gfx-backend-metal"]
gl = ["gfx-backend-gl"]
dx11 = ["gfx-backend-dx11"]
dx12 = ["gfx-backend-dx12"]
vulkan = ["gfx-backend-vulkan"]

[dependencies]
log = "0.4"
env_logger = "0.6"
winit = "0.19"
gfx-hal = "0.2"
nalgebra-glm = "0.4"

[dependencies.gfx-backend-gl]
version = "0.2"
features = ["glutin"]
optional = true

[dependencies.gfx-backend-vulkan]
version = "0.2"
optional = true

[target.'cfg(any(target_os = "macos", all(target_os = "ios", target_arch = "aarch64")))'.dependencies.gfx-backend-metal]
version = "0.2"
optional = true

[target.'cfg(windows)'.dependencies.gfx-backend-dx11]
version = "0.2"
optional = true

[target.'cfg(windows)'.dependencies.gfx-backend-dx12]
version = "0.2"
optional = true

[build-dependencies]
shaderc = "0.5"